# mtk-tools

./: CMakeLists.txt  LICENSE  README.md
include/: common.hpp  mtk_container.hpp  mtk_unpackbootimg.hpp
src/: common.cpp  main.cpp  main.hpp  mtk_container.cpp  mtk_unpackbootimg.cpp
